--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,31 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Chat Local
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-list>
+    <ion-item>
+      <ion-label>Chat:</ion-label>
+      <ion-select [(ngModel)]="tpChat">
+        <ion-option value="cinema">Cinema</ion-option>
+        <ion-option value="esportes">Esportes</ion-option>
+        <ion-option value="diversos">Diversos</ion-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-label>Nome:</ion-label>
+      <ion-input type="text" [(ngModel)]="nome"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-buttons end>
+        <button ion-button (click)="onClickChat()" round>confirmar</button>
+      </ion-buttons>
+    </ion-item>
+  </ion-list>
+
 </ion-content>
+
